# cta-ridership-dynamics

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/features/: X_ca_2018.geojson  X_ca_agg_2018.geojson  X_ca_agg_2023.geojson  X_temp.csv
data/ridership/: y.csv
notebooks/: 00_eda.ipynb  01a_temporal_features.ipynb  01b_mstl_with_arimax.ipynb  02a_spatial_features.ipynb  02b_route_analysis.ipynb
src/final_project/: config.py  utils.py
src/final_project/data/: acs.py  cta.py  noaa.py
src/final_project/features/: spatial.py  temporal.py
src/final_project/models/: mstl_arimax.py
