[project]
name = "csci-116-final-project"
version = "0.1.0"
description = "CTA ridership dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.0",
]
