[project]
name = "csci-116-final-project"
version = "0.1.0"
description = "CTA ridership dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "census>=0.8.24",
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "meteostat>=1.7.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.0",
]
